done servisec cards

--- a/app/index.html
+++ b/app/index.html
@@ -319,7 +319,7 @@
           </div>
           <div class="servisec-cards d-flex">
             <div class="servisec-cards-col">
-              <div class="servisec-card" style="background-image: url(images/servisec-card-1.png);">
+              <div class="servisec-card first">
                 <div class="servisec-card__title">
                   ПОЛИГРАФИЯ <br>
                   ДЛЯ ФИНАНСОВЫХ
@@ -337,7 +337,7 @@
             </div>
             <div class="servisec-cards-col">
               <div class="servisec-cards-row d-flex">
-                <div class="servisec-card servisec-card__sm" style="background-image: url(images/servisec-card-2.png);">
+                <div class="servisec-card servisec-card__sm">
                   <div class="servisec-card__title">
                     ПОЛИГРАФИЯ <br>
                     ДЛЯ СТРОИТЕЛЬНЫХ
@@ -352,7 +352,7 @@
                     <a class="servisec-card__link btn" href="#">Подробнее</a>
                   </div>
                 </div>
-                <div class="servisec-card servisec-card__sm" style="background-image: url(images/servisec-card-3.png);">
+                <div class="servisec-card servisec-card__sm">
                   <div class="servisec-card__title">
                     ПОЛИГРАФИЯ <br>
                     ДЛЯ ТРАНСПОРТНЫХ
@@ -369,7 +369,7 @@
                 </div>
               </div>
               <div class="servisec-cards-row d-flex">
-                <div class="servisec-card servisec-card__sm" style="background-image: url(images/servisec-card-4.png);">
+                <div class="servisec-card servisec-card__sm">
                   <div class="servisec-card__title">
                     ПОЛИГРАФИЯ <br>
                     ДЛЯ МЕДИЦИНСКИХ
@@ -383,7 +383,7 @@
                     <a class="servisec-card__link btn" href="#">Подробнее</a>
                   </div>
                 </div>
-                <div class="servisec-card servisec-card__sm" style="background-image: url(images/servisec-card-5.png);">
+                <div class="servisec-card servisec-card__sm">
                   <div class="servisec-card__title">
                     ПОЛИГРАФИЯ <br>
                     ДЛЯ ТОРГОВЫХ ПРЕДПРИЯТИЙ
