done main banner mobile

--- a/app/index.html
+++ b/app/index.html
@@ -65,11 +65,18 @@
           <div class="banner-slide">
             <div class="container">
               <div class="banner-item">
+                <div class="banner-item__img d-flex">
+                  <picture>
+                    <source srcset="images/banner-slide-1_mob.png" media="(max-width: 992px)">
+                    <img src="images/main-slide-1-1.png" alt="">
+                  </picture>
+                </div>
+                <!--<img src="images/banner-slide-1-1.png" alt="">
+                  <img src="images/banner-slide-1-2.png" alt="">
+            
                 <picture>
                   <source srcset="images/banner-slide-1_mob.png" media="(max-width: 650px)">
-                  <img class="banner-item__img" src="images/main-slide-1.png" alt="">
-                </picture>
-
+                </picture>-->
                 <div class="btn-group banner-slider-btn-group">
                   <a class="btn btn-primary" href="#">Заказать звонок</a>
                   <div class="banner-slider__text">
@@ -83,10 +90,19 @@
           <div class="banner-slide">
             <div class="container">
               <div class="banner-item">
-                <picture>
-                  <source srcset="images/banner-slide-2_mob.png" media="(max-width: 650px)">
-                  <img class="banner-item__img img-position" src="images/main-slide-2.png" alt="">
-                </picture>
+                <div class="banner-item__img img-position">
+                  <picture>
+                    <source srcset="images/banner-slide-2_mob.png" media="(max-width: 992px)">
+                    <img class="img-position" src="images/main-slide-2-1.png" alt="">
+                  </picture>
+                  <!-- <img src="images/banner-slide-2-1.png" alt="">
+                  <img src="images/banner-slide-2-2.png" alt="" style="width: 40%;">
+                  <picture>
+                    <source srcset="images/banner-slide-2_mob.png" media="(max-width: 650px)">
+                  </picture>-->
+
+                </div>
+
                 <div class="btn-group banner-slider-btn-group">
                   <div class="btn-group">
                     <a class="btn btn-primary">Заказать звонок</a>
