done main banner and added animation in servisec item

--- a/app/index.html
+++ b/app/index.html
@@ -71,12 +71,6 @@
                     <img src="images/main-slide-1-1.png" alt="">
                   </picture>
                 </div>
-                <!--<img src="images/banner-slide-1-1.png" alt="">
-                  <img src="images/banner-slide-1-2.png" alt="">
-            
-                <picture>
-                  <source srcset="images/banner-slide-1_mob.png" media="(max-width: 650px)">
-                </picture>-->
                 <div class="btn-group banner-slider-btn-group">
                   <a class="btn btn-primary" href="#">Заказать звонок</a>
                   <div class="banner-slider__text">
@@ -95,12 +89,6 @@
                     <source srcset="images/banner-slide-2_mob.png" media="(max-width: 992px)">
                     <img class="img-position" src="images/main-slide-2-1.png" alt="">
                   </picture>
-                  <!-- <img src="images/banner-slide-2-1.png" alt="">
-                  <img src="images/banner-slide-2-2.png" alt="" style="width: 40%;">
-                  <picture>
-                    <source srcset="images/banner-slide-2_mob.png" media="(max-width: 650px)">
-                  </picture>-->
-
                 </div>
 
                 <div class="btn-group banner-slider-btn-group">
@@ -249,7 +237,7 @@
                   </svg>
                 </div>
                 <div class="servisec-item__title">
-                  Изготовление
+                  Изготовление <br>
                   упаковки
                 </div>
               </div>
